--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,6 +55,6 @@ steps:
     arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
     zipAfterPublish: true
 
-- task: PublishBuildArtificate@1
+- task: PublishBuildArtifacts@1
   displayName: 'Publish Arififact: drop'
   condition: succeeded()
